# Ne10

./: CMakeLists.txt
android/: android_config.cmake
common/: factor.h
inc/: NE10_init.h
modules/dsp/: NE10_fft.c  NE10_rfft_float32.c  NE10_rfft_float32.neonintrinsic.c
